Fix gap menu

--- a/css/app.css
+++ b/css/app.css
@@ -5248,6 +5248,7 @@ header {
         color: #009688; }
       header .logo-area {
         margin-top: 20px;
+        margin-bottom: 5px;
         float: left;
         margin-right: 40px;
         height: 68px; }
