--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -123,6 +123,7 @@ header {
 		a {color:$primary-color}
 		.logo-area {
 			margin-top: 20px;
+			margin-bottom: 5px;
 			float: left;
 			margin-right: 40px;
 			height: 68px;
